ci: use CodeQL build-mode none for java to bypass compilation